WIP commit - precompile in process

--- a/package.json
+++ b/package.json
@@ -6,6 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-mincer": "0.0.2",
+    "jade": "^1.9.2",
+    "mincer": "^1.3.1",
+    "minify": "^1.4.20"
+  },
   "author": "Navneet Garg <navneetgarg123@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "del": "^2.0.2",
+    "gulp": "^3.9.0"
+  }
 }
