--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chokidar": "^1.0.5",
+    "connect-livereload": "^0.5.3",
+    "csswring": "^4.0.0",
+    "debug": "^2.2.0",
     "del": "^2.0.2",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
+    "gulp-gzip": "^1.2.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-mincer": "0.0.2",
+    "gulp-tar": "^1.4.0",
     "jade": "^1.9.2",
     "mincer": "^1.3.1",
-    "minify": "^1.4.20"
+    "minify": "^1.4.20",
+    "run-sequence": "^1.1.2",
+    "tiny-lr": "^0.1.6",
+    "uglify-js": "^2.4.24"
   },
   "author": "Navneet Garg <navneetgarg123@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "del": "^2.0.2",
-    "gulp": "^3.9.0"
-  }
+  "license": "ISC"
 }
